--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -3,6 +3,8 @@
 
   @media screen and (max-width: 515px) {
 
+
+
     .brand {
       text-align: left;
     }
@@ -21,40 +23,88 @@
       color: #E84849;
     }
 
-    .topnav #myLinks {
-      display: none;
-      flex-direction: column;
-    }
 
-    .topnav #myLinks a {
-      text-decoration: none;
-      color: #595959;
 
-      &.projectsMenu {
-        color: #E84849;
-      }
-    }
+    .menu-toggle {
+      margin-left: auto;
 
-    .topnav #myLinks.active {
+      width: 40px;
+      height: 32px;
+
       display: flex;
-      align-items: flex-start;
-      gap: 6px;
-      margin-top: 36px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
 
+      gap: 6px;
+
+      background: transparent;
+      border: 0;
+      padding: 0;
+      cursor: pointer;
+
+      z-index: 1000;
     }
 
+    .menu-toggle span {
+      display: block;
+      height: 3px;
+      width: 100%;
+      background: #595959;
+      border-radius: 2px;
+      transition: 0.3s ease;
+    }
+
+    .menu-toggle.active span:nth-child(1) {
+      transform: rotate(45deg) translate(6px, 6px);
+    }
+
+    .menu-toggle.active span:nth-child(2) {
+      opacity: 0;
+    }
+
+    .menu-toggle.active span:nth-child(3) {
+      transform: rotate(-45deg) translate(6px, -6px);
+    }
+
+    //////
     .topnav {
       display: flex;
       align-items: center;
-      padding: 10px 20px 10px;
+      flex-wrap: wrap;
+      padding: 10px 15px 10px;
     }
 
-    .icon {
-      margin-left: auto;
-      font-size: 28px;
-      background: none;
-      border: none;
+    .topnav #myLinks {
+      width: 100%;
+      order: 2;
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+
+      overflow: hidden;
+      max-height: 0;
+      transform: translateX(-120%);
+      transition: transform 0.3s ease, max-height 0.3s ease;
     }
+
+    .topnav #myLinks.active {
+      margin-top: 10px;
+      transform: translateX(0);
+      max-height: 300px;
+      font-size: 1.3rem;
+
+      a {
+        color: #000000;
+        text-decoration: none;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
+
+    }
+
 
     /* HERO SECTION*/
 
